--- a/index.html
+++ b/index.html
@@ -8,21 +8,56 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 	<link href="css/bootstrap.min.css" rel="stylesheet" type="text/css"/>
 	<link href="css/ohmygod.css" rel="stylesheet" type="text/css"/>
-
-<script>
-var _hmt = _hmt || [];
-(function() {
-  var hm = document.createElement("script");
-  hm.src = "//hm.baidu.com/hm.js?e9e0ed8d2dd56059cc040dc1f05b7424";
-  var s = document.getElementsByTagName("script")[0]; 
-  s.parentNode.insertBefore(hm, s);
-})();
-</script>
-
-
+	<link rel="stylesheet" href="css/style.css" type="text/css" />
+	<link href="css/index.css" rel="stylesheet" type="text/css"/>
+	<link rel="stylesheet" href="css/jquery.thoughtBubble.css">
 </head>
 <body>
-	<div class="container">
+  	<canvas id="text" width="500" height="100"></canvas>
+	<canvas id="stage" width="500" height="100"></canvas>
+	<form id="form">
+    	<input type="text" id="inputText" value="唐楚芝" />
+    	<input type="submit" value="TRY IT" id="submit" />
+	</form>
+	<div class="pic" id="pic">
+		<div class="row row-1 clearfix">
+			<div class="row-col-1" style="float:left">
+				<img src="img/1.jpg" alt="...">
+			</div>
+			<div class="row-col-2" style="float:left">
+				<img src="img/2.jpg" alt="..." id="emitter">
+			</div>
+			<div class="row-col-3" style="float:left">
+				<img src="img/3.jpg" alt="...">
+			</div>
+		</div>
+		<div class="row row-2 clearfix">
+			<div class="row-col-1" style="float:left">
+				<img src="img/4.jpg" alt="...">
+			</div>
+			<div class="row-col-2" style="float:left">
+				<img src="img/5.jpg" alt="..." onclick="showName()">
+			</div>
+			<div class="row-col-3" style="float:left">
+				<img src="img/6.jpg" alt="...">
+			</div>
+		</div>
+		<div class="row row-3 clearfix">
+			<div class="row-col-1" style="float:left">
+				<img src="img/7.jpg" alt="...">
+			</div>
+			<div class="row-col-2" style="float:left">
+				<img src="img/8.jpg" alt="...">
+			</div>
+			<div class="row-col-3" style="float:left">
+				<img src="img/9.jpg" alt="...">
+			</div>
+		</div>
+	</div>
+	<div id="pic2" class="pic2">
+		<img src="img/pig.jpg" id="thoughtBubble">
+	</div>
+<!-- 	<div class="container">
 		<div class="row">
 			<div class="col-xs-4 col-md-4">
 				<a href="https://shijieshangzuimeidenvren.github.io" class="thumbnail">
@@ -74,18 +109,26 @@ var _hmt = _hmt || [];
 				</a>
 			</div>
 		</div>
-	</div>
-	
-	
-<!--高速版 评论区插件-->
-<div id="SOHUCS"></div>
-<script charset="utf-8" type="text/javascript" src="http://changyan.sohu.com/upload/changyan.js" ></script>
-<script type="text/javascript">
-    window.changyan.api.config({
-        appid: 'cyskDoXl7',
-        conf: 'prod_fa618278615b137d565fbf6449b26edb'
-    });
-</script> 
-
+	</div> -->
 </body>
+<script src='js/EasePack.min.js'></script>
+<script src='js/TweenLite.min.js'></script>
+<script src='js/easeljs-0.7.1.min.js'></script>
+<script src='js/requestAnimationFrame.js'></script>
+<script src="js/index.js"></script>
+<script src="js/jquery-2.1.1.min.js" type="text/javascript"></script>
+<script type="text/javascript" src='js/jquery.thoughtBubble.js'></script>
+<script type="text/javascript">
+	function showName(){
+		document.getElementById('pic').style.display = 'none';
+		document.getElementById('pic2').style.display = 'block';
+		//document.getElementById('submit').click();
+				$('#thoughtBubble').thoughtBubble({
+			text: '大爷，我美不。',
+			font: 'avenir'
+
+		});
+	}
+
+</script>
 </html>
