--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     	<input type="text" id="inputText" value="唐楚芝" />
     	<input type="submit" value="TRY IT" id="submit" />
 	</form>
-	<div class="pic" id="pic">
+<!-- 	<div class="pic" id="pic">
 		<div class="row row-1 clearfix">
 			<div class="row-col-1" style="float:left">
 				<img src="img/1.jpg" alt="...">
@@ -56,8 +56,8 @@
 	</div>
 	<div id="pic2" class="pic2">
 		<img src="img/pig.jpg" id="thoughtBubble">
-	</div>
-<!-- 	<div class="container">
+	</div> -->
+	<div class="container" id="container">
 		<div class="row">
 			<div class="col-xs-4 col-md-4">
 				<a href="https://shijieshangzuimeidenvren.github.io" class="thumbnail">
@@ -109,7 +109,7 @@
 				</a>
 			</div>
 		</div>
-	</div> -->
+	</div>
 </body>
 <script src='js/EasePack.min.js'></script>
 <script src='js/TweenLite.min.js'></script>
