--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 	<link rel="stylesheet" href="css/jquery.thoughtBubble.css">
 </head>
 <body>
-  	<canvas id="text" width="500" height="100"></canvas>
-	<canvas id="stage" width="500" height="100"></canvas>
+  	<canvas id="text"></canvas>
+	<canvas id="stage"></canvas>
 	<form id="form">
     	<input type="text" id="inputText" value="唐楚芝" />
     	<input type="submit" value="TRY IT" id="submit" />
