--- a/index.html
+++ b/index.html
@@ -53,58 +53,58 @@
 				<img src="img/9.jpg" alt="...">
 			</div>
 		</div>
-	</div>
+	</div> -->
 	<div id="pic2" class="pic2">
 		<img src="img/pig.jpg" id="thoughtBubble">
-	</div> -->
+	</div>
 	<div class="container" id="container">
 		<div class="row">
 			<div class="col-xs-4 col-md-4">
-				<a href="https://shijieshangzuimeidenvren.github.io" class="thumbnail">
+				<a href="javascript:void(0)" class="thumbnail">
 					<img src="img/1.jpg" alt="...">
 				</a>
 			</div>
 			<div class="col-xs-4 col-md-4">
-				<a href="https://shijieshangzuimeidenvren.github.io" class="thumbnail">
+				<a href="javascript:void(0)" class="thumbnail">
 					<img src="img/2.jpg" alt="...">
 				</a>
 			</div>
 			<div class="col-xs-4 col-md-4">
-				<a href="https://shijieshangzuimeidenvren.github.io" class="thumbnail">
+				<a href="javascript:void(0)" class="thumbnail">
 					<img src="img/3.jpg" alt="...">
 				</a>
 			</div>
 		</div>
 		<div class="row">
 			<div class="col-xs-4 col-md-4">
-				<a href="https://shijieshangzuimeidenvren.github.io" class="thumbnail">
+				<a href="javascript:void(0)" class="thumbnail">
 					<img src="img/4.jpg" alt="...">
 				</a>
 			</div>
 			<div class="col-xs-4 col-md-4">
-				<a href="https://shijieshangzuimeidenvren.github.io" class="thumbnail">
+				<a href="javascript:void(0)" class="thumbnail" onclick="showName()">
 					<img src="img/5.jpg" alt="...">
 				</a>
 			</div>
 			<div class="col-xs-4 col-md-4">
-				<a href="https://shijieshangzuimeidenvren.github.io" class="thumbnail">
+				<a href="javascript:void(0)" class="thumbnail">
 					<img src="img/6.jpg" alt="...">
 				</a>
 			</div>
 		</div>
 		<div class="row">
 			<div class="col-xs-4 col-md-4">
-				<a href="https://shijieshangzuimeidenvren.github.io" class="thumbnail">
+				<a href="javascript:void(0)" class="thumbnail">
 					<img src="img/7.jpg" alt="...">
 				</a>
 			</div>
 			<div class="col-xs-4 col-md-4">
-				<a href="https://shijieshangzuimeidenvren.github.io" class="thumbnail">
+				<a href="javascript:void(0)" class="thumbnail">
 					<img src="img/8.jpg" alt="...">
 				</a>
 			</div>
 			<div class="col-xs-4 col-md-4">
-				<a href="https://shijieshangzuimeidenvren.github.io" class="thumbnail">
+				<a href="javascript:void(0)" class="thumbnail">
 					<img src="img/9.jpg" alt="...">
 				</a>
 			</div>
@@ -120,14 +120,18 @@
 <script type="text/javascript" src='js/jquery.thoughtBubble.js'></script>
 <script type="text/javascript">
 	function showName(){
-		document.getElementById('pic').style.display = 'none';
+		document.getElementById('container').style.display = 'none';
 		document.getElementById('pic2').style.display = 'block';
 		//document.getElementById('submit').click();
-				$('#thoughtBubble').thoughtBubble({
-			text: '大爷，我美不。',
-			font: 'avenir'
+		showTip('我是Miss唐,楚芝。大爷,我美不。');
+		setTimeout("showTip('............')", 5000);
+	}
 
-		});
+	function showTip(msg){
+		$('#thoughtBubble').thoughtBubble({
+			text: msg,
+			font: 'avenir'
+		});		
 	}
 
 </script>
