--- a/index.html
+++ b/index.html
@@ -54,10 +54,11 @@
 			</div>
 		</div>
 	</div> -->
-	<div id="pic2" class="pic2">
-		<img src="img/pig.jpg" id="thoughtBubble">
-	</div>
 	<div class="container" id="container">
+		<div id="pic2" class="pic2">
+			<img src="img/pig.jpg" id="thoughtBubble">
+		</div>
+		<div id="pic">
 		<div class="row">
 			<div class="col-xs-4 col-md-4">
 				<a href="javascript:void(0)" class="thumbnail">
@@ -109,6 +110,7 @@
 				</a>
 			</div>
 		</div>
+		</div>
 	</div>
 </body>
 <script src="js/jquery-2.1.1.min.js" type="text/javascript"></script>
@@ -120,7 +122,7 @@
 <script type="text/javascript" src='js/jquery.thoughtBubble.js'></script>
 <script type="text/javascript">
 	function showName(){
-		document.getElementById('container').style.display = 'none';
+		document.getElementById('pic').style.display = 'none';
 		document.getElementById('pic2').style.display = 'block';
 		//document.getElementById('submit').click();
 		showTip('我是Miss唐,楚芝。大爷,我美不。');
