--- a/index.html
+++ b/index.html
@@ -87,15 +87,17 @@
 			</div>
 			<div class="col-xs-4 col-md-4">
 				<a href="javascript:void(0)" class="thumbnail" onclick="showName()">
-					<div class="click-div" style="height:168px;text-align:center;padding:50px 0px">
-					<p>唐楚芝</p>
-					<p>点我有图看！！！！！</p>
+					<div class="click-div" style="text-align:center;" id="click-div">
+						<div class="div-content">
+						<p>唐楚芝</p>
+						<p>点我有图看！！！！！</p>
+						</div>
 					</div>
 				</a>
 			</div>
 			<div class="col-xs-4 col-md-4">
 				<a href="javascript:void(0)" class="thumbnail">
-					<img src="img/6.jpg" alt="...">
+					<img src="img/6.jpg" alt="..." id="pic_6">
 				</a>
 			</div>
 		</div>
